app/assets/stylesheets/frontend/views/_policies.scss
.policies-index {

  .block-2 h1 {
  //  @include sans-15;
  }
  .alphabetical-list .alphabetical-row {
    p {
    //  @include sans-15;
    }
    .inner {
      padding-top: $gutter-one-third;
    }
    li {
      a {
      //  @include sans-15;
      }
    }

    @media (min-width: 768px) {
      .inner {
        padding: $gutter-two-thirds 0 $gutter;
        min-height: $gutter*2;
      }
      li {
        width: 100%;
        float: none;
        display: block;
      }
    }
  }
}

.policy {
  @include media(desktop){
    .meta-topic {
      float: left;
      width: 50%;
    }
  }

  .meta {
    @include core-14;
      clear: none;
      float: right;
      margin-top: 2px;
      width: 47.5%;
      text-align: right;
    .metadata {
      display: inline;
      line-height: 35px;
    }
    .change-notes {
      margin-left: $gutter-one-third;

      &.toggleable .overlay {
        left: -100%;
        .arrow {
          left: 70%;
        }
      }
    }

    @include media(desktop){
    position: relative;
    margin-top: $gutter-one-third;
    }
  }

    .block-1, .block-2, .block-3 {
      display: block;
      float: none;
      width: 100%;
    }

  @include media(desktop){
    .block-2, .block-3 {
      float: left;
      display: inline;
      width: 25%;
    }
    .block-3 {
      width: 75%;
    }
  }


  .supporting-page-title {
    @include core-27;
    margin-bottom: $gutter;
  }

  .contextual-info {
      @include core-14;
    nav {
      margin-top: 0;
    }
  }

  #document-organisations + #document-ministers,
  #policy_team,
  #document-organisations {
    margin: 0;
    padding-left: 0;
    padding-top: 0;
    @include media(desktop){
      margin: 0 0 0 25%;
    }
  }

  #policy_team {
    p {
      @include sans-18;
    }
  }

  #document-ministers {
    margin-bottom: $gutter;
    overflow: hidden;
    @include core-14;
    .ministers {
      p {
        a {
          white-space: nowrap;
        }
      }
    }
  }

  .current-appointee {
    margin-right: $gutter-half;
  }

  .page-header {
    width: 100%;
    float: none;
    padding: $gutter-two-thirds 0 $gutter;
    h1 {
      text-align: left;
      max-width: 100%;
    }
    @include media(desktop){
      padding: $gutter 0 40px;
      h1 {
      clear: both;
      text-align: center;
      max-width: 18em;
      margin: 0 auto;
      }
    }
  }

  .policy-parts {
    ol {
      list-style: decimal;
    }
  }

  .govspeak {
    margin-top: $gutter!important;
    h2 {
      position: relative;
    }
  }

  .supporting_pages {
    li {
      border-style: solid;
      border-color: $cool-grey $light-blue-grey $white $cool-grey;
      border-width: 0 1px;
      padding: 0!important;
        a {
        background-color: $cool-grey;
        border-bottom: 1px solid $white;
        display: block;
        min-height: 50px;
        padding: $gutter-two-thirds;
        overflow: hidden;
        text-decoration: none;
        z-index: 1;
        &:hover, &:focus {
          background-color: lighten($cool-grey, 5%);
          @include transition(background, 0.5s, ease)
        }
      }
    }
    li.active {
        a {
        background-color: $white;
      }
      border-color: $light-blue-grey $white $light-blue-grey $light-blue-grey;
      border-width: 1px;
    }
    li:first-child.active {
      border-top-color: $white;
    }
  }

  // this is shown when there's no policy-navigation
  .no-navigation {
    border-bottom: 1px solid $light-blue-grey;
    padding-bottom: 50px;
    // this margin-bottom depends on font size, but we can't add ems and px
    margin-bottom: $gutter + 34px;
  }

  .policy-navigation {
//     border: none;
//   ul {
//     margin: 0;
//     width: 100%;
//     li {
//       width: 32%;
//     }
//   }


    border-top: 1px solid $light-blue-grey;
    display: block;
    margin: $gutter 0 $gutter-two-thirds;
    width: 100%;
    ul {
      @include border-radius(0.6em);
      background-color: lighten($charcoal-grey, 10%);
      display: inline-block;
      margin: 0;
      overflow: hidden;
      padding: $gutter-half*0.4;
      position: relative;
         -moz-box-sizing: border-box;
          -ms-box-sizing: border-box;
           -o-box-sizing: border-box;
      -webkit-box-sizing: border-box;
              box-sizing: border-box;
      width: 100%;
      li {
        float: left;
        display: inline;
        margin-right: $gutter-half*0.4;
        width: 32%;

        a {
          @include core-19;
          font-family: $NTA-Bold;
          color: $white;
          display: block;
          padding: $gutter-one-third 0;
          @include border-radius(0.3em);
          text-align: center;
          text-decoration: none;
          width: auto;
          opacity: 0.75;
          &.current {
            opacity: 0.85;
            @include gradient(#bbb, #888);
          }
          &:hover, &:focus {
            opacity: 1;
          }
        }
      }
      li:last-child {
        margin-right: 0;
      }
    }

    @include media(tablet){
      margin: $gutter 0 $gutter-two-thirds;
      width: auto;
      ul {
        margin: -30px auto $gutter 20%;
        width: auto;
        li {
          width: 8em;
        }
      }
    }

    @include media(desktop){
    display: block;
    margin-top: 70px;
    width: auto;
      ul {
        margin: -30px auto $gutter 25%;
        width: auto;
        li {
          width: 11em;
        }
      }
    }



  }

  #case-studies {
    h1 {
      // from _document.scss h2
      @include core-27;
      color: lighten($body-text, 50%);
      margin-top: $gutter;
      @media (max-width: 640px) {
        margin-top: $gutter-half;
      }
    }
    li {
      // from _document.scss li
      width: 90%;
      @include core-19;
      margin-left: $gutter*1.2;

      li {
        margin-left: $gutter;
      }

      @media (min-width: 768px) {
        margin-left: 0;

        li {
          margin-left: $gutter*2;
        }
      }
    }
  }

}

.policies-activities {
  .policy {
    .block-1, .block-2 {
      display: block;
      float: none;
      width: 100%;
    }
  }

  // see helpers/_feed.scss for the other styles
  .subscribe {
    float: right;
  }

  .label {
    float: left;
  }

  .document-list .document-row td {
    width: 22%;
  }
}

